Прочитал Искажающие реальность. Книга 1

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a186" src="jpg/izkazh_real_1.jpg" title="Искажающие реальность. Книга 1. Обратный отсчет (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_13.jpg" title="[Эркюль Пуаро #13] Убийство в Месопотамии"></th>
 <th><a id="a185" src="jpg/lovec_videnii.jpg" title="Ловец видений (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_9.jpg" title="[Эркюль Пуаро #9] Трагедия в трех актах"></th>
@@ -543,13 +544,21 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4><a href="http://flibusta.is/a/191615">Асад-заде Чингиз</a></h4></th>
+<th colspan="8"><h4><a href="http://flibusta.is/a/143632">Атаманов Михаил</a></h4></th>
+</tr><tr></tr>
+<th><img src="jpg/sistema_razyma.jpg" title="Система Разума. Секреты ментализма"></th>
+<th><img src="jpg/0.jpg"></th>
+<th><a id="a186" src="jpg/izkazh_real_1.jpg" title="Искажающие реальность. Книга 1. Обратный отсчет (аудиокнига)"></a></th>
+</tr></table>
+
+
+
+<table><tr align="left"> 
 <th colspan="2"><h4><a href="http://flibusta.is/a/30541"> Аткинсон Уильям</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/25885"> Баллард Джеймс</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/139762">Барден Фил</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/208731">Батырев Максим</a></h4></th>
 </tr><tr>
-<th><img src="jpg/sistema_razyma.jpg" title="Система Разума. Секреты ментализма"></th>
-<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/sila_misli.jpg" title="Закон привлечения и сила мысли"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/visotka.jpg" title="Высотка"></th> 
