Прочитал Искажающие реальность. Книга 2

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
-<th><a id="a186" src="jpg/izkazh_real_1.jpg" title="Искажающие реальность. Книга 1. Обратный отсчет (аудиокнига)"></a></th>
+<th><a id="a187" src="jpg/izkazh_real_2.jpg" title="Искажающие реальность. Книга 2 (аудиокнига)"></a></th>
+<th><a id="a186" src="jpg/izkazh_real_1.jpg" title="Искажающие реальность. Книга 1 (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_13.jpg" title="[Эркюль Пуаро #13] Убийство в Месопотамии"></th>
 <th><a id="a185" src="jpg/lovec_videnii.jpg" title="Ловец видений (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_9.jpg" title="[Эркюль Пуаро #9] Трагедия в трех актах"></th>
@@ -548,7 +549,8 @@
 </tr><tr></tr>
 <th><img src="jpg/sistema_razyma.jpg" title="Система Разума. Секреты ментализма"></th>
 <th><img src="jpg/0.jpg"></th>
-<th><a id="a186" src="jpg/izkazh_real_1.jpg" title="Искажающие реальность. Книга 1. Обратный отсчет (аудиокнига)"></a></th>
+<th><a id="a186" src="jpg/izkazh_real_1.jpg" title="Искажающие реальность. Книга 1 (аудиокнига)"></a></th>
+<th><a id="a187" src="jpg/izkazh_real_2.jpg" title="Искажающие реальность. Книга 2 (аудиокнига)"></a></th>
 </tr></table>
 
 
