Прочитал Искажающие реальность. Книга 3

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a188" src="jpg/izkazh_real_3.jpg" title="Искажающие реальность. Книга 3 (аудиокнига)"></a></th>		
 <th><a id="a187" src="jpg/izkazh_real_2.jpg" title="Искажающие реальность. Книга 2 (аудиокнига)"></a></th>
 <th><a id="a186" src="jpg/izkazh_real_1.jpg" title="Искажающие реальность. Книга 1 (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_13.jpg" title="[Эркюль Пуаро #13] Убийство в Месопотамии"></th>
@@ -551,6 +552,7 @@
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a186" src="jpg/izkazh_real_1.jpg" title="Искажающие реальность. Книга 1 (аудиокнига)"></a></th>
 <th><a id="a187" src="jpg/izkazh_real_2.jpg" title="Искажающие реальность. Книга 2 (аудиокнига)"></a></th>
+<th><a id="a188" src="jpg/izkazh_real_3.jpg" title="Искажающие реальность. Книга 3 (аудиокнига)"></a></th>	
 </tr></table>
 
 
