Прочитал Искажающие реальность. Книга 6

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a191" src="jpg/izkazh_real_6.jpg" title="Искажающие реальность. Книга 6 (аудиокнига)"></a></th>		
 <th><a id="a190" src="jpg/izkazh_real_5.jpg" title="Искажающие реальность. Книга 5 (аудиокнига)"></a></th>
 <th><a id="a189" src="jpg/izkazh_real_4.jpg" title="Искажающие реальность. Книга 4 (аудиокнига)"></a></th>	
 	<th><img src="data/03.2025.jpg"></th>
@@ -559,6 +560,7 @@
 <th><a id="a188" src="jpg/izkazh_real_3.jpg" title="Искажающие реальность. Книга 3 (аудиокнига)"></a></th>	
 <th><a id="a189" src="jpg/izkazh_real_4.jpg" title="Искажающие реальность. Книга 4 (аудиокнига)"></a></th>
 <th><a id="a190" src="jpg/izkazh_real_5.jpg" title="Искажающие реальность. Книга 5 (аудиокнига)"></a></th>
+<th><a id="a191" src="jpg/izkazh_real_6.jpg" title="Искажающие реальность. Книга 6 (аудиокнига)"></a></th>	
 </tr></table>
 
 
