--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/pyaro_15.jpg" title="[Эркюль Пуаро #15] Смерть на Ниле"></th>	
 <th><a id="a191" src="jpg/izkazh_real_6.jpg" title="Искажающие реальность. Книга 6 (аудиокнига)"></a></th>		
 <th><a id="a190" src="jpg/izkazh_real_5.jpg" title="Искажающие реальность. Книга 5 (аудиокнига)"></a></th>
 <th><a id="a189" src="jpg/izkazh_real_4.jpg" title="Искажающие реальность. Книга 4 (аудиокнига)"></a></th>	
@@ -1379,13 +1380,14 @@
 <th><img src="jpg/pyaro_12.jpg" title="[Эркюль Пуаро #12] Убийства по алфавиту"></th>
 <th><img src="jpg/pyaro_13.jpg" title="[Эркюль Пуаро #13] Убийство в Месопотамии"></th>
 <th><img src="jpg/pyaro_14.jpg" title="[Эркюль Пуаро #14] Карты на столе"></th>	
+<th><img src="jpg/pyaro_15.jpg" title="[Эркюль Пуаро #15] Смерть на Ниле"></th>	
 <th><img src="jpg/pyaro_31.jpg" title="[Эркюль Пуаро #31] После похорон"></th>
-<th><img src="jpg/pyaro_16let.jpg" title="[Эркюль Пуаро] Шестнадцать лет спустя"></th>
 <th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
+<th><img src="jpg/pyaro_16let.jpg" title="[Эркюль Пуаро] Шестнадцать лет спустя"></th>
 <th><img src="jpg/marpl_2.jpg" title="[Мисс Марпл #2] Труп в библиотеке"></th>
-<th><img src="jpg/marpl_4.jpg" title="[Мисс Марпл #4] Объявлено убийство"></th>
-<th><img src="jpg/marpl_8.jpg" title="[Мисс Марпл #8] В 4.50 из Паддингтона"></th> </tr>
-<tr> <th><img src="jpg/beli_kon.jpg" title="Вилла Белый конь"></th>
+<th><img src="jpg/marpl_4.jpg" title="[Мисс Марпл #4] Объявлено убийство"></th> </tr>
+<tr> <th><img src="jpg/marpl_8.jpg" title="[Мисс Марпл #8] В 4.50 из Паддингтона"></th>
+<th><img src="jpg/beli_kon.jpg" title="Вилла Белый конь"></th>
 <th><img src="jpg/kristi_agata_01.jpg" title="Почему не позвали Уилби?"></th> 
 <th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th>
 <th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
