Прочитал Искажающие реальность. Книга 8

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a193" src="jpg/izkazh_real_8.jpg" title="Искажающие реальность. Книга 8 (аудиокнига)"></a></th>			
 <th><a id="a192" src="jpg/izkazh_real_7.jpg" title="Искажающие реальность. Книга 7 (аудиокнига)"></a></th>	
 <th><img src="jpg/pyaro_15.jpg" title="[Эркюль Пуаро #15] Смерть на Ниле"></th>	
 <th><a id="a191" src="jpg/izkazh_real_6.jpg" title="Искажающие реальность. Книга 6 (аудиокнига)"></a></th>		
@@ -564,6 +565,7 @@
 <th><a id="a190" src="jpg/izkazh_real_5.jpg" title="Искажающие реальность. Книга 5 (аудиокнига)"></a></th>
 <th><a id="a191" src="jpg/izkazh_real_6.jpg" title="Искажающие реальность. Книга 6 (аудиокнига)"></a></th>	
 <th><a id="a192" src="jpg/izkazh_real_7.jpg" title="Искажающие реальность. Книга 7 (аудиокнига)"></a></th>	
+<th><a id="a193" src="jpg/izkazh_real_8.jpg" title="Искажающие реальность. Книга 8 (аудиокнига)"></a></th>
 </tr></table>
 
 
