Прочитал Искажающие реальность. Книга 9

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a194" src="jpg/izkazh_real_9.jpg" title="Искажающие реальность. Книга 9 (аудиокнига)"></a></th>			
 <th><a id="a193" src="jpg/izkazh_real_8.jpg" title="Искажающие реальность. Книга 8 (аудиокнига)"></a></th>			
 <th><a id="a192" src="jpg/izkazh_real_7.jpg" title="Искажающие реальность. Книга 7 (аудиокнига)"></a></th>	
 <th><img src="jpg/pyaro_15.jpg" title="[Эркюль Пуаро #15] Смерть на Ниле"></th>	
@@ -554,10 +555,16 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4><a href="http://flibusta.is/a/191615">Асад-заде Чингиз</a></h4></th>
-<th colspan="8"><h4><a href="http://flibusta.is/a/143632">Атаманов Михаил</a></h4></th>
 </tr><tr></tr>
 <th><img src="jpg/sistema_razyma.jpg" title="Система Разума. Секреты ментализма"></th>
 <th><img src="jpg/0.jpg"></th>
+</tr></table>
+
+
+
+<table><tr align="left"> 
+<th colspan="10"><h4><a href="http://flibusta.is/a/143632">Атаманов Михаил</a></h4></th>
+</tr><tr></tr>
 <th><a id="a186" src="jpg/izkazh_real_1.jpg" title="Искажающие реальность. Книга 1 (аудиокнига)"></a></th>
 <th><a id="a187" src="jpg/izkazh_real_2.jpg" title="Искажающие реальность. Книга 2 (аудиокнига)"></a></th>
 <th><a id="a188" src="jpg/izkazh_real_3.jpg" title="Искажающие реальность. Книга 3 (аудиокнига)"></a></th>	
@@ -566,6 +573,7 @@
 <th><a id="a191" src="jpg/izkazh_real_6.jpg" title="Искажающие реальность. Книга 6 (аудиокнига)"></a></th>	
 <th><a id="a192" src="jpg/izkazh_real_7.jpg" title="Искажающие реальность. Книга 7 (аудиокнига)"></a></th>	
 <th><a id="a193" src="jpg/izkazh_real_8.jpg" title="Искажающие реальность. Книга 8 (аудиокнига)"></a></th>
+<th><a id="a194" src="jpg/izkazh_real_9.jpg" title="Искажающие реальность. Книга 9 (аудиокнига)"></a></th>
 </tr></table>
 
 
