Прочитал Искажающие реальность. Книга 12

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a197" src="jpg/izkazh_real_12.jpg" title="Искажающие реальность. Книга 12 (аудиокнига)"></a></th>
 <th><a id="a196" src="jpg/izkazh_real_11.jpg" title="Искажающие реальность. Книга 11 (аудиокнига)"></a></th>	
 <th><img src="jpg/pyaro_16.jpg" title="[Эркюль Пуаро #16] Немой свидетель"></th>		
 <th><a id="a195" src="jpg/izkazh_real_10.jpg" title="Искажающие реальность. Книга 10 (аудиокнига)"></a></th>		
@@ -579,6 +580,7 @@
 <th><a id="a194" src="jpg/izkazh_real_9.jpg" title="Искажающие реальность. Книга 9 (аудиокнига)"></a></th>
 <th><a id="a195" src="jpg/izkazh_real_10.jpg" title="Искажающие реальность. Книга 10 (аудиокнига)"></a></th> </tr>
 <tr> <th><a id="a196" src="jpg/izkazh_real_11.jpg" title="Искажающие реальность. Книга 11 (аудиокнига)"></a></th>
+<th><a id="a197" src="jpg/izkazh_real_12.jpg" title="Искажающие реальность. Книга 12 (аудиокнига)"></a></th>
 </tr></table>
 
 
