--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a198" src="jpg/pyaro_34.jpg" title="[Эркюль Пуаро #34] Кошка среди голубей (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_17-20.jpg" title="[Эркюль Пуаро #17-20] Убийство в проходном дворе (сборник): Убийство в проходном дворе, Невероятная кража, Зеркало мертвеца, Родосский треугольник"></th>			
 <th><a id="a197" src="jpg/izkazh_real_12.jpg" title="Искажающие реальность. Книга 12 (аудиокнига)"></a></th>
 <th><a id="a196" src="jpg/izkazh_real_11.jpg" title="Искажающие реальность. Книга 11 (аудиокнига)"></a></th>	
@@ -1404,9 +1405,10 @@
 <th><img src="jpg/pyaro_16.jpg" title="[Эркюль Пуаро #16] Немой свидетель"></th>
 <th><img src="jpg/pyaro_17-20.jpg" title="[Эркюль Пуаро #17-20] Убийство в проходном дворе (сборник): Убийство в проходном дворе, Невероятная кража, Зеркало мертвеца, Родосский треугольник"></th>	
 <th><img src="jpg/pyaro_31.jpg" title="[Эркюль Пуаро #31] После похорон"></th>
-<th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
-<th><img src="jpg/pyaro_16let.jpg" title="[Эркюль Пуаро] Шестнадцать лет спустя"></th> </tr>
-<tr> <th><img src="jpg/marpl_2.jpg" title="[Мисс Марпл #2] Труп в библиотеке"></th>
+<th><a id="a198" src="jpg/pyaro_34.jpg" title="[Эркюль Пуаро #34] Кошка среди голубей (аудиокнига)"></a></th>
+<th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th> </tr>
+<tr> <th><img src="jpg/pyaro_16let.jpg" title="[Эркюль Пуаро] Шестнадцать лет спустя"></th>
+<th><img src="jpg/marpl_2.jpg" title="[Мисс Марпл #2] Труп в библиотеке"></th>
 <th><img src="jpg/marpl_4.jpg" title="[Мисс Марпл #4] Объявлено убийство"></th>
 <th><img src="jpg/marpl_8.jpg" title="[Мисс Марпл #8] В 4.50 из Паддингтона"></th>
 <th><img src="jpg/beli_kon.jpg" title="Вилла Белый конь"></th>
