--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/valeri_yrla.jpg" title="Карантинная планета"></th>	
 <th><a id="a198" src="jpg/pyaro_34.jpg" title="[Эркюль Пуаро #34] Кошка среди голубей (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_17-20.jpg" title="[Эркюль Пуаро #17-20] Убийство в проходном дворе (сборник): Убийство в проходном дворе, Невероятная кража, Зеркало мертвеца, Родосский треугольник"></th>			
 <th><a id="a197" src="jpg/izkazh_real_12.jpg" title="Искажающие реальность. Книга 12 (аудиокнига)"></a></th>
@@ -571,6 +572,7 @@
 <table><tr align="left"> 
 <th colspan="10"><h4><a href="http://flibusta.is/a/143632">Атаманов Михаил</a></h4></th>
 </tr><tr></tr>
+<th><img src="jpg/valeri_yrla.jpg" title="Карантинная планета"></th>	
 <th><a id="a186" src="jpg/izkazh_real_1.jpg" title="Искажающие реальность. Книга 1 (аудиокнига)"></a></th>
 <th><a id="a187" src="jpg/izkazh_real_2.jpg" title="Искажающие реальность. Книга 2 (аудиокнига)"></a></th>
 <th><a id="a188" src="jpg/izkazh_real_3.jpg" title="Искажающие реальность. Книга 3 (аудиокнига)"></a></th>	
@@ -579,9 +581,9 @@
 <th><a id="a191" src="jpg/izkazh_real_6.jpg" title="Искажающие реальность. Книга 6 (аудиокнига)"></a></th>	
 <th><a id="a192" src="jpg/izkazh_real_7.jpg" title="Искажающие реальность. Книга 7 (аудиокнига)"></a></th>	
 <th><a id="a193" src="jpg/izkazh_real_8.jpg" title="Искажающие реальность. Книга 8 (аудиокнига)"></a></th>
-<th><a id="a194" src="jpg/izkazh_real_9.jpg" title="Искажающие реальность. Книга 9 (аудиокнига)"></a></th>
-<th><a id="a195" src="jpg/izkazh_real_10.jpg" title="Искажающие реальность. Книга 10 (аудиокнига)"></a></th> </tr>
-<tr> <th><a id="a196" src="jpg/izkazh_real_11.jpg" title="Искажающие реальность. Книга 11 (аудиокнига)"></a></th>
+<th><a id="a194" src="jpg/izkazh_real_9.jpg" title="Искажающие реальность. Книга 9 (аудиокнига)"></a></th> </tr>
+<tr> <th><a id="a195" src="jpg/izkazh_real_10.jpg" title="Искажающие реальность. Книга 10 (аудиокнига)"></a></th>
+<th><a id="a196" src="jpg/izkazh_real_11.jpg" title="Искажающие реальность. Книга 11 (аудиокнига)"></a></th>
 <th><a id="a197" src="jpg/izkazh_real_12.jpg" title="Искажающие реальность. Книга 12 (аудиокнига)"></a></th>
 </tr></table>
 
