--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/pyaro_21.jpg" title="[Эркюль Пуаро #21] Свидание со смертью"></th>
 <th><a id="a199" src="jpg/zaschita_perimetra_1.jpg" title="Защита периметра 1. Восьмой сектор (аудиокнига)"></a></th>
 <th><img src="jpg/valeri_yrla.jpg" title="Карантинная планета"></th>	
 <th><a id="a198" src="jpg/pyaro_34.jpg" title="[Эркюль Пуаро #34] Кошка среди голубей (аудиокнига)"></a></th>
@@ -1408,10 +1409,11 @@
 <th><img src="jpg/pyaro_15.jpg" title="[Эркюль Пуаро #15] Смерть на Ниле"></th>	
 <th><img src="jpg/pyaro_16.jpg" title="[Эркюль Пуаро #16] Немой свидетель"></th>
 <th><img src="jpg/pyaro_17-20.jpg" title="[Эркюль Пуаро #17-20] Убийство в проходном дворе (сборник): Убийство в проходном дворе, Невероятная кража, Зеркало мертвеца, Родосский треугольник"></th>	
+<th><img src="jpg/pyaro_21.jpg" title="[Эркюль Пуаро #21] Свидание со смертью"></th>
 <th><img src="jpg/pyaro_31.jpg" title="[Эркюль Пуаро #31] После похорон"></th>
-<th><a id="a198" src="jpg/pyaro_34.jpg" title="[Эркюль Пуаро #34] Кошка среди голубей (аудиокнига)"></a></th>
-<th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th> </tr>
-<tr> <th><img src="jpg/pyaro_16let.jpg" title="[Эркюль Пуаро] Шестнадцать лет спустя"></th>
+<th><a id="a198" src="jpg/pyaro_34.jpg" title="[Эркюль Пуаро #34] Кошка среди голубей (аудиокнига)"></a></th> </tr>
+<tr> <th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
+<th><img src="jpg/pyaro_16let.jpg" title="[Эркюль Пуаро] Шестнадцать лет спустя"></th>
 <th><img src="jpg/marpl_2.jpg" title="[Мисс Марпл #2] Труп в библиотеке"></th>
 <th><img src="jpg/marpl_4.jpg" title="[Мисс Марпл #4] Объявлено убийство"></th>
 <th><img src="jpg/marpl_8.jpg" title="[Мисс Марпл #8] В 4.50 из Паддингтона"></th>
