--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a200" src="jpg/zaschita_perimetra_2.jpg" title="Защита периметра 2. Через смерть (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_21.jpg" title="[Эркюль Пуаро #21] Свидание со смертью"></th>
 <th><a id="a199" src="jpg/zaschita_perimetra_1.jpg" title="Защита периметра 1. Восьмой сектор (аудиокнига)"></a></th>
 <th><img src="jpg/valeri_yrla.jpg" title="Карантинная планета"></th>	
@@ -575,6 +576,7 @@
 <th colspan="10"><h4><a href="http://flibusta.is/a/143632">Атаманов Михаил</a></h4></th>
 </tr><tr></tr>
 <th><a id="a199" src="jpg/zaschita_perimetra_1.jpg" title="Защита периметра 1. Восьмой сектор (аудиокнига)"></a></th>
+<th><a id="a200" src="jpg/zaschita_perimetra_2.jpg" title="Защита периметра 2. Через смерть (аудиокнига)"></a></th>
 <th><img src="jpg/valeri_yrla.jpg" title="Карантинная планета"></th>	
 <th><a id="a186" src="jpg/izkazh_real_1.jpg" title="Искажающие реальность. Книга 1 (аудиокнига)"></a></th>
 <th><a id="a187" src="jpg/izkazh_real_2.jpg" title="Искажающие реальность. Книга 2 (аудиокнига)"></a></th>
@@ -582,9 +584,9 @@
 <th><a id="a189" src="jpg/izkazh_real_4.jpg" title="Искажающие реальность. Книга 4 (аудиокнига)"></a></th>
 <th><a id="a190" src="jpg/izkazh_real_5.jpg" title="Искажающие реальность. Книга 5 (аудиокнига)"></a></th>
 <th><a id="a191" src="jpg/izkazh_real_6.jpg" title="Искажающие реальность. Книга 6 (аудиокнига)"></a></th>	
-<th><a id="a192" src="jpg/izkazh_real_7.jpg" title="Искажающие реальность. Книга 7 (аудиокнига)"></a></th>	
-<th><a id="a193" src="jpg/izkazh_real_8.jpg" title="Искажающие реальность. Книга 8 (аудиокнига)"></a></th> </tr>
-<tr> <th><a id="a194" src="jpg/izkazh_real_9.jpg" title="Искажающие реальность. Книга 9 (аудиокнига)"></a></th>
+<th><a id="a192" src="jpg/izkazh_real_7.jpg" title="Искажающие реальность. Книга 7 (аудиокнига)"></a></th> </tr>
+<tr> <th><a id="a193" src="jpg/izkazh_real_8.jpg" title="Искажающие реальность. Книга 8 (аудиокнига)"></a></th>
+<th><a id="a194" src="jpg/izkazh_real_9.jpg" title="Искажающие реальность. Книга 9 (аудиокнига)"></a></th>
 <th><a id="a195" src="jpg/izkazh_real_10.jpg" title="Искажающие реальность. Книга 10 (аудиокнига)"></a></th>
 <th><a id="a196" src="jpg/izkazh_real_11.jpg" title="Искажающие реальность. Книга 11 (аудиокнига)"></a></th>
 <th><a id="a197" src="jpg/izkazh_real_12.jpg" title="Искажающие реальность. Книга 12 (аудиокнига)"></a></th>
