--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/pyaro_22.jpg" title="[Эркюль Пуаро #22] Рождество Эркюля Пуаро"></th>
 <th><a id="a202" src="jpg/zaschita_perimetra_4.jpg" title="Защита периметра 4. Второй контракт (аудиокнига)"></a></th>
 <th><a id="a201" src="jpg/zaschita_perimetra_3.jpg" title="Защита периметра 3. Второй контракт (аудиокнига)"></a></th>
 <th><a id="a200" src="jpg/zaschita_perimetra_2.jpg" title="Защита периметра 2. Через смерть (аудиокнига)"></a></th>
@@ -1416,9 +1417,10 @@
 <th><img src="jpg/pyaro_16.jpg" title="[Эркюль Пуаро #16] Немой свидетель"></th>
 <th><img src="jpg/pyaro_17-20.jpg" title="[Эркюль Пуаро #17-20] Убийство в проходном дворе (сборник): Убийство в проходном дворе, Невероятная кража, Зеркало мертвеца, Родосский треугольник"></th>	
 <th><img src="jpg/pyaro_21.jpg" title="[Эркюль Пуаро #21] Свидание со смертью"></th>
-<th><img src="jpg/pyaro_31.jpg" title="[Эркюль Пуаро #31] После похорон"></th>
-<th><a id="a198" src="jpg/pyaro_34.jpg" title="[Эркюль Пуаро #34] Кошка среди голубей (аудиокнига)"></a></th> </tr>
-<tr> <th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
+<th><img src="jpg/pyaro_22.jpg" title="[Эркюль Пуаро #22] Рождество Эркюля Пуаро"></th>
+<th><img src="jpg/pyaro_31.jpg" title="[Эркюль Пуаро #31] После похорон"></th> </tr>
+<tr> <th><a id="a198" src="jpg/pyaro_34.jpg" title="[Эркюль Пуаро #34] Кошка среди голубей (аудиокнига)"></a></th>
+<th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
 <th><img src="jpg/pyaro_16let.jpg" title="[Эркюль Пуаро] Шестнадцать лет спустя"></th>
 <th><img src="jpg/marpl_2.jpg" title="[Мисс Марпл #2] Труп в библиотеке"></th>
 <th><img src="jpg/marpl_4.jpg" title="[Мисс Марпл #4] Объявлено убийство"></th>
