Прочитал Темный травник. Тестировщик игровых сценариев

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a203" src="jpg/temni_travnik_1.jpg" title="Темный травник. Тестировщик игровых сценариев (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_22.jpg" title="[Эркюль Пуаро #22] Рождество Эркюля Пуаро"></th>
 <th><a id="a202" src="jpg/zaschita_perimetra_4.jpg" title="Защита периметра 4. Второй контракт (аудиокнига)"></a></th>
 <th><a id="a201" src="jpg/zaschita_perimetra_3.jpg" title="Защита периметра 3. Второй контракт (аудиокнига)"></a></th>
@@ -595,6 +596,7 @@
 <th><a id="a195" src="jpg/izkazh_real_10.jpg" title="Искажающие реальность. Книга 10 (аудиокнига)"></a></th>
 <th><a id="a196" src="jpg/izkazh_real_11.jpg" title="Искажающие реальность. Книга 11 (аудиокнига)"></a></th>
 <th><a id="a197" src="jpg/izkazh_real_12.jpg" title="Искажающие реальность. Книга 12 (аудиокнига)"></a></th>
+<th><a id="a203" src="jpg/temni_travnik_1.jpg" title="Темный травник. Тестировщик игровых сценариев (аудиокнига)"></a></th>
 </tr></table>
 
 
