--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+	<th><img src="data/04.2025.jpg"></th>	
 <th><a id="a203" src="jpg/temni_travnik_1.jpg" title="Темный травник. Тестировщик игровых сценариев (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_22.jpg" title="[Эркюль Пуаро #22] Рождество Эркюля Пуаро"></th>
 <th><a id="a202" src="jpg/zaschita_perimetra_4.jpg" title="Защита периметра 4. Второй контракт (аудиокнига)"></a></th>
