Прочитал Раз, два - пряжку застегни

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
-	<th><img src="data/04.2025.jpg"></th>	
+<th><img src="jpg/pyaro_23.jpg" title="[Эркюль Пуаро #23] Раз, два - пряжку застегни"></th>	
+	<th><img src="data/04.2025.jpg"></th>
 <th><a id="a203" src="jpg/temni_travnik_1.jpg" title="Темный травник. Тестировщик игровых сценариев (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_22.jpg" title="[Эркюль Пуаро #22] Рождество Эркюля Пуаро"></th>
 <th><a id="a202" src="jpg/zaschita_perimetra_4.jpg" title="Защита периметра 4. Второй контракт (аудиокнига)"></a></th>
@@ -1421,8 +1422,9 @@
 <th><img src="jpg/pyaro_17-20.jpg" title="[Эркюль Пуаро #17-20] Убийство в проходном дворе (сборник): Убийство в проходном дворе, Невероятная кража, Зеркало мертвеца, Родосский треугольник"></th>	
 <th><img src="jpg/pyaro_21.jpg" title="[Эркюль Пуаро #21] Свидание со смертью"></th>
 <th><img src="jpg/pyaro_22.jpg" title="[Эркюль Пуаро #22] Рождество Эркюля Пуаро"></th>
-<th><img src="jpg/pyaro_31.jpg" title="[Эркюль Пуаро #31] После похорон"></th> </tr>
-<tr> <th><a id="a198" src="jpg/pyaro_34.jpg" title="[Эркюль Пуаро #34] Кошка среди голубей (аудиокнига)"></a></th>
+<th><img src="jpg/pyaro_23.jpg" title="[Эркюль Пуаро #23] Раз, два - пряжку застегни"></th> </tr>
+<tr> <th><img src="jpg/pyaro_31.jpg" title="[Эркюль Пуаро #31] После похорон"></th>
+<th><a id="a198" src="jpg/pyaro_34.jpg" title="[Эркюль Пуаро #34] Кошка среди голубей (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
 <th><img src="jpg/pyaro_16let.jpg" title="[Эркюль Пуаро] Шестнадцать лет спустя"></th>
 <th><img src="jpg/marpl_2.jpg" title="[Мисс Марпл #2] Труп в библиотеке"></th>
@@ -1430,8 +1432,8 @@
 <th><img src="jpg/marpl_8.jpg" title="[Мисс Марпл #8] В 4.50 из Паддингтона"></th>
 <th><img src="jpg/beli_kon.jpg" title="Вилла Белый конь"></th>
 <th><img src="jpg/kristi_agata_01.jpg" title="Почему не позвали Уилби?"></th> 
-<th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th>
-<th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
+<th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th> </tr>
+<tr> <th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
 </tr></table>
 
 
