Прочитал Верховья Стикса

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a205" src="jpg/temni_travnik_3.jpg" title="Темный травник. Верховья Стикса (аудиокнига)"></a></th>
 <th><a id="a204" src="jpg/temni_travnik_2.jpg" title="Темный травник. Сохранить крылья (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_23.jpg" title="[Эркюль Пуаро #23] Раз, два - пряжку застегни"></th>	
 	<th><img src="data/04.2025.jpg"></th>
@@ -601,6 +602,7 @@
 <th><a id="a197" src="jpg/izkazh_real_12.jpg" title="Искажающие реальность. Книга 12 (аудиокнига)"></a></th>
 <th><a id="a203" src="jpg/temni_travnik_1.jpg" title="Темный травник. Тестировщик игровых сценариев (аудиокнига)"></a></th>
 <th><a id="a204" src="jpg/temni_travnik_2.jpg" title="Темный травник. Сохранить крылья (аудиокнига)"></a></th>
+<th><a id="a205" src="jpg/temni_travnik_3.jpg" title="Темный травник. Верховья Стикса (аудиокнига)"></a></th>
 </tr></table>
 
 
