--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/myzh_pravila.jpg" title="Мужские правила"></th>
 <th><a id="a206" src="jpg/temni_travnik_4.jpg" title="Темный травник. Обрести тело (аудиокнига)"></a></th>
 <th><a id="a205" src="jpg/temni_travnik_3.jpg" title="Темный травник. Верховья Стикса (аудиокнига)"></a></th>
 <th><a id="a204" src="jpg/temni_travnik_2.jpg" title="Темный травник. Сохранить крылья (аудиокнига)"></a></th>
