Прочитал Тренируем мозг. Т №2

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/mozg_tetrad_2.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №2"></th>
 <th><img src="jpg/myzh_pravila.jpg" title="Мужские правила"></th>
 <th><a id="a206" src="jpg/temni_travnik_4.jpg" title="Темный травник. Обрести тело (аудиокнига)"></a></th>
 <th><a id="a205" src="jpg/temni_travnik_3.jpg" title="Темный травник. Верховья Стикса (аудиокнига)"></a></th>
@@ -1220,21 +1221,21 @@
 
 
 <table><tr align="left"> 
-<th colspan="4"><h4><a href="https://flibusta.is/a/188174">Кавашима Рюта</a></h4></th>
+<th colspan="5"><h4><a href="https://flibusta.is/a/188174">Кавашима Рюта</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/252840">Карапинар Онур</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/181230">Кардон Грант</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/199351">Карназес Дин</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.is/a/181230">Кардон Грант</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="https://flibusta.is/a/199351">Карназес Дин</a></h4></th>
 </tr><tr>   
 <th><img src="jpg/kavashima_1.jpg" title="Японская система развития интеллекта и памяти"></th>
 <th><img src="jpg/kavashima_2.jpg" title="Суперсчет для супермозга"></th>
 <th><img src="jpg/mozg_tetrad_1.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №1"></th>
+<th><img src="jpg/mozg_tetrad_2.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №2"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a98" src="jpg/51_praktika.jpg" title="Маленькие привычки, большие успехи. 51 вдохновляющая практика, чтобы стать лучшей версией себя (аудиокнига)"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/10X.jpg" title="Правило в 10 раз больше"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/beg_bez_sna.jpg" title="Бегущий без сна"></th>
-<th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
