Прочитал Печальный кипарис

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/pyaro_24.jpg" title="[Эркюль Пуаро #24] Печальный кипарис"></th>	
 <th><a id="a207" src="jpg/alians_neydachnikov_1.jpg" title="Альянс неудачников. Котёнок и его человек (аудиокнига)"></a></th>
 <th><img src="jpg/mozg_tetrad_2.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №2"></th>
 <th><img src="jpg/myzh_pravila.jpg" title="Мужские правила"></th>
@@ -1433,7 +1434,8 @@
 <th><img src="jpg/pyaro_21.jpg" title="[Эркюль Пуаро #21] Свидание со смертью"></th>
 <th><img src="jpg/pyaro_22.jpg" title="[Эркюль Пуаро #22] Рождество Эркюля Пуаро"></th>
 <th><img src="jpg/pyaro_23.jpg" title="[Эркюль Пуаро #23] Раз, два - пряжку застегни"></th> </tr>
-<tr> <th><img src="jpg/pyaro_31.jpg" title="[Эркюль Пуаро #31] После похорон"></th>
+<tr> <th><img src="jpg/pyaro_24.jpg" title="[Эркюль Пуаро #24] Печальный кипарис"></th>	
+<th><img src="jpg/pyaro_31.jpg" title="[Эркюль Пуаро #31] После похорон"></th>
 <th><a id="a198" src="jpg/pyaro_34.jpg" title="[Эркюль Пуаро #34] Кошка среди голубей (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
 <th><img src="jpg/pyaro_16let.jpg" title="[Эркюль Пуаро] Шестнадцать лет спустя"></th>
@@ -1441,9 +1443,9 @@
 <th><img src="jpg/marpl_4.jpg" title="[Мисс Марпл #4] Объявлено убийство"></th>
 <th><img src="jpg/marpl_8.jpg" title="[Мисс Марпл #8] В 4.50 из Паддингтона"></th>
 <th><img src="jpg/beli_kon.jpg" title="Вилла Белый конь"></th>
-<th><img src="jpg/kristi_agata_01.jpg" title="Почему не позвали Уилби?"></th> 
-<th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th> </tr>
-<tr> <th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
+<th><img src="jpg/kristi_agata_01.jpg" title="Почему не позвали Уилби?"></th> </tr>
+<tr> <th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th>
+<th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
 </tr></table>
 
 
