--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a208" src="jpg/alians_neydachnikov_2.jpg" title="Альянс неудачников. На службе Фараона (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_24.jpg" title="[Эркюль Пуаро #24] Печальный кипарис"></th>	
 <th><a id="a207" src="jpg/alians_neydachnikov_1.jpg" title="Альянс неудачников. Котёнок и его человек (аудиокнига)"></a></th>
 <th><img src="jpg/mozg_tetrad_2.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №2"></th>
@@ -610,6 +611,7 @@
 <th><a id="a205" src="jpg/temni_travnik_3.jpg" title="Темный травник. Верховья Стикса (аудиокнига)"></a></th> </tr>
 <tr> <th><a id="a206" src="jpg/temni_travnik_4.jpg" title="Темный травник. Обрести тело (аудиокнига)"></a></th>
 <th><a id="a207" src="jpg/alians_neydachnikov_1.jpg" title="Альянс неудачников. Котёнок и его человек (аудиокнига)"></a></th>
+<th><a id="a208" src="jpg/alians_neydachnikov_2.jpg" title="Альянс неудачников. На службе Фараона (аудиокнига)"></a></th>
 </tr></table>
 
 
