--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/pyaro_25.jpg" title="[Эркюль Пуаро #25] Зло под солнцем"></th>	
 <th><a id="a208" src="jpg/alians_neydachnikov_2.jpg" title="Альянс неудачников. На службе Фараона (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_24.jpg" title="[Эркюль Пуаро #24] Печальный кипарис"></th>	
 <th><a id="a207" src="jpg/alians_neydachnikov_1.jpg" title="Альянс неудачников. Котёнок и его человек (аудиокнига)"></a></th>
@@ -1437,16 +1438,24 @@
 <th><img src="jpg/pyaro_22.jpg" title="[Эркюль Пуаро #22] Рождество Эркюля Пуаро"></th>
 <th><img src="jpg/pyaro_23.jpg" title="[Эркюль Пуаро #23] Раз, два - пряжку застегни"></th> </tr>
 <tr> <th><img src="jpg/pyaro_24.jpg" title="[Эркюль Пуаро #24] Печальный кипарис"></th>	
+<th><img src="jpg/pyaro_25.jpg" title="[Эркюль Пуаро #25] Зло под солнцем"></th>
+<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/pyaro_31.jpg" title="[Эркюль Пуаро #31] После похорон"></th>
-<th><a id="a198" src="jpg/pyaro_34.jpg" title="[Эркюль Пуаро #34] Кошка среди голубей (аудиокнига)"></a></th>
+<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/0.jpg"></th>  </tr>
+<tr> <th><a id="a198" src="jpg/pyaro_34.jpg" title="[Эркюль Пуаро #34] Кошка среди голубей (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
 <th><img src="jpg/pyaro_16let.jpg" title="[Эркюль Пуаро] Шестнадцать лет спустя"></th>
 <th><img src="jpg/marpl_2.jpg" title="[Мисс Марпл #2] Труп в библиотеке"></th>
 <th><img src="jpg/marpl_4.jpg" title="[Мисс Марпл #4] Объявлено убийство"></th>
 <th><img src="jpg/marpl_8.jpg" title="[Мисс Марпл #8] В 4.50 из Паддингтона"></th>
 <th><img src="jpg/beli_kon.jpg" title="Вилла Белый конь"></th>
-<th><img src="jpg/kristi_agata_01.jpg" title="Почему не позвали Уилби?"></th> </tr>
-<tr> <th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th>
+<th><img src="jpg/kristi_agata_01.jpg" title="Почему не позвали Уилби?"></th>
+<th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th>
 <th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
 </tr></table>
 
