Прочитал Новые боги

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/alians_neydachnikov_4.jpg" title="Альянс неудачников. Новые боги"></th>	
 <th><a id="a209" src="jpg/alians_neydachnikov_3.jpg" title="Альянс неудачников. Первая зима (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_25.jpg" title="[Эркюль Пуаро #25] Зло под солнцем"></th>	
 <th><a id="a208" src="jpg/alians_neydachnikov_2.jpg" title="Альянс неудачников. На службе Фараона (аудиокнига)"></a></th>
@@ -615,6 +616,7 @@
 <th><a id="a207" src="jpg/alians_neydachnikov_1.jpg" title="Альянс неудачников. Котёнок и его человек (аудиокнига)"></a></th>
 <th><a id="a208" src="jpg/alians_neydachnikov_2.jpg" title="Альянс неудачников. На службе Фараона (аудиокнига)"></a></th>
 <th><a id="a209" src="jpg/alians_neydachnikov_3.jpg" title="Альянс неудачников. Первая зима (аудиокнига)"></a></th>
+<th><img src="jpg/alians_neydachnikov_4.jpg" title="Альянс неудачников. Новые боги"></th>	
 </tr></table>
 
 
