Прочитал Пять поросят

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/pyaro_26.jpg" title="[Эркюль Пуаро #26] Пять поросят"></th>	
 	<th><img src="data/05.2025.jpg"></th>
 <th><img src="jpg/alians_neydachnikov_4.jpg" title="Альянс неудачников. Новые боги"></th>	
 <th><a id="a209" src="jpg/alians_neydachnikov_3.jpg" title="Альянс неудачников. Первая зима (аудиокнига)"></a></th>
@@ -1444,7 +1445,7 @@
 <th><img src="jpg/pyaro_23.jpg" title="[Эркюль Пуаро #23] Раз, два - пряжку застегни"></th> </tr>
 <tr> <th><img src="jpg/pyaro_24.jpg" title="[Эркюль Пуаро #24] Печальный кипарис"></th>	
 <th><img src="jpg/pyaro_25.jpg" title="[Эркюль Пуаро #25] Зло под солнцем"></th>
-<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/pyaro_26.jpg" title="[Эркюль Пуаро #26] Пять поросят"></th>	
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/0.jpg"></th>
