Прочитал Путь королей

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a210" src="jpg/arhiv_buresveta_1.jpg" title="Путь королей (аудиокнига)"></a></th>	
 <th><img src="jpg/pyaro_26.jpg" title="[Эркюль Пуаро #26] Пять поросят"></th>	
 	<th><img src="data/05.2025.jpg"></th>
 <th><img src="jpg/alians_neydachnikov_4.jpg" title="Альянс неудачников. Новые боги"></th>	
@@ -1931,10 +1932,13 @@
 <table><tr align="left"> 
 <th colspan="2"><h4><a href="https://flibusta.is/a/19981">Рэнд Айн</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/20622">Сааведра Мигель</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/24262">Сандерсон Брендон</a></h4></th>
 </tr><tr>      
 <th><a id="a15" src="jpg/atlant.jpg" title="Атлант расправил плечи (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a123" src="jpg/don_kihot.jpg" title="Дон Кихот Ламанчский (аудиокнига)"></a></th>
+<th><img src="jpg/0.jpg"></th>
+<th><a id="a210" src="jpg/arhiv_buresveta_1.jpg" title="Путь королей (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 </tr></table>
 
