--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/pyaro_27.jpg" title="[Эркюль Пуаро #27] Лощина"></th>	
 <th><a id="a210" src="jpg/arhiv_buresveta_1.jpg" title="Путь королей (аудиокнига)"></a></th>	
 <th><img src="jpg/pyaro_26.jpg" title="[Эркюль Пуаро #26] Пять поросят"></th>	
 	<th><img src="data/05.2025.jpg"></th>
@@ -1447,7 +1448,7 @@
 <tr> <th><img src="jpg/pyaro_24.jpg" title="[Эркюль Пуаро #24] Печальный кипарис"></th>	
 <th><img src="jpg/pyaro_25.jpg" title="[Эркюль Пуаро #25] Зло под солнцем"></th>
 <th><img src="jpg/pyaro_26.jpg" title="[Эркюль Пуаро #26] Пять поросят"></th>	
-<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/pyaro_27.jpg" title="[Эркюль Пуаро #27] Лощина"></th>	
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/0.jpg"></th>
