Прочитал Слова сияния

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a211" src="jpg/arhiv_buresveta_2.jpg" title="Слова сияния (аудиокнига)"></a></th>	
 <th><img src="jpg/pyaro_27.jpg" title="[Эркюль Пуаро #27] Лощина"></th>	
 <th><a id="a210" src="jpg/arhiv_buresveta_1.jpg" title="Путь королей (аудиокнига)"></a></th>	
 <th><img src="jpg/pyaro_26.jpg" title="[Эркюль Пуаро #26] Пять поросят"></th>	
@@ -1940,7 +1941,7 @@
 <th><a id="a123" src="jpg/don_kihot.jpg" title="Дон Кихот Ламанчский (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a210" src="jpg/arhiv_buresveta_1.jpg" title="Путь королей (аудиокнига)"></a></th>
-<th><img src="jpg/0.jpg"></th>
+<th><a id="a211" src="jpg/arhiv_buresveta_2.jpg" title="Слова сияния (аудиокнига)"></a></th>	
 </tr></table>
 
 
