--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/25h.jpg" title="25-й час. Руководство по управлению временем"></th>
 <th><img src="jpg/lifehack.jpg" title="Лайфхак на каждый день"></th>
 <th><a id="a211" src="jpg/arhiv_buresveta_2.jpg" title="Слова сияния (аудиокнига)"></a></th>	
 <th><img src="jpg/pyaro_27.jpg" title="[Эркюль Пуаро #27] Лощина"></th>	
@@ -1677,20 +1678,20 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4><a href="https://flibusta.is/a/18055"> Морган Ричард</a></h4></th>
-<th colspan="4"><h4><a href="https://flibusta.is/a/101599">Мрочковский Николай</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/8593">  Мусаси Миямото</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/195609">Маэда Джон</a></h4></th>
+<th colspan="5"><h4><a href="https://flibusta.is/a/101599">Мрочковский Николай</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.is/a/8593">  Мусаси Миямото</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="https://flibusta.is/a/195609">Маэда Джон</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/yglerod.jpg" title="Видоизмененный углерод"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/extrim.jpg" title="Мрочковский Николай, Толкачев Алексей - Экстремальный тайм-менеджмент"></th>
 <th><a id="a29" src="jpg/ekstrim_menedzhment_2.jpg" title="Мрочковский Николай, Толкачев Алексей - Личная власть (аудиокнига)"></a></th>
 <th><img src="jpg/bistrie_rezultati.jpg" title="Мрочковский Николай, Парабеллум Андрей - Быстрые результаты. 10-дневная программа повышения личной эффективности"></th>
+<th><img src="jpg/25h.jpg" title="Мрочковский Николай, Парабеллум Андрей - 25-й час. Руководство по управлению временем"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/bysido_3.jpg" title="Книга Пяти Колец"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/z_prostoti.jpg" title="Законы простоты"></th>
-<th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
