--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/pyaro_28.jpg" title="[Эркюль Пуаро #28] Подвиги Геракла"></th>	
 <th><img src="jpg/25h.jpg" title="25-й час. Руководство по управлению временем"></th>
 <th><img src="jpg/lifehack.jpg" title="Лайфхак на каждый день"></th>
 <th><a id="a211" src="jpg/arhiv_buresveta_2.jpg" title="Слова сияния (аудиокнига)"></a></th>	
@@ -1452,7 +1453,7 @@
 <th><img src="jpg/pyaro_25.jpg" title="[Эркюль Пуаро #25] Зло под солнцем"></th>
 <th><img src="jpg/pyaro_26.jpg" title="[Эркюль Пуаро #26] Пять поросят"></th>	
 <th><img src="jpg/pyaro_27.jpg" title="[Эркюль Пуаро #27] Лощина"></th>	
-<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/pyaro_28.jpg" title="[Эркюль Пуаро #28] Подвиги Геракла"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/pyaro_31.jpg" title="[Эркюль Пуаро #31] После похорон"></th>
