Прочитал Unfu*k yourself

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/unfuck_yourself.jpg" title="Unfu*k yourself"></th>		
 <th><img src="jpg/pyaro_28.jpg" title="[Эркюль Пуаро #28] Подвиги Геракла"></th>	
 <th><img src="jpg/25h.jpg" title="25-й час. Руководство по управлению временем"></th>
 <th><img src="jpg/lifehack.jpg" title="Лайфхак на каждый день"></th>
@@ -734,8 +735,11 @@
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4><a href="http://flibusta.is/a/202056">Бишоп Гэри</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/219402">Богачев Евгений</a></h4></th>
 </tr><tr>
+<th><img src="jpg/unfuck_yourself.jpg" title="Unfu*k yourself"></th>
+<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/podgotovka_omon.jpg" title="Богачев Евгений, Арутюнов Александр - Физическая подготовка военнослужащих и сотрудников силовых структур"></th>
 <th><img src="jpg/0.jpg"></th>
 </tr></table>
