--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/pyaro_29.jpg" title="[Эркюль Пуаро #29] Прилив"></th>	
+		<th><img src="data/06.2025.jpg"></th>
 <th><img src="jpg/unfuck_yourself.jpg" title="Unfu*k yourself"></th>		
 <th><img src="jpg/pyaro_28.jpg" title="[Эркюль Пуаро #28] Подвиги Геракла"></th>	
 <th><img src="jpg/25h.jpg" title="25-й час. Руководство по управлению временем"></th>
@@ -1458,7 +1460,7 @@
 <th><img src="jpg/pyaro_26.jpg" title="[Эркюль Пуаро #26] Пять поросят"></th>	
 <th><img src="jpg/pyaro_27.jpg" title="[Эркюль Пуаро #27] Лощина"></th>	
 <th><img src="jpg/pyaro_28.jpg" title="[Эркюль Пуаро #28] Подвиги Геракла"></th>
-<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/pyaro_29.jpg" title="[Эркюль Пуаро #29] Прилив"></th>	
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/pyaro_31.jpg" title="[Эркюль Пуаро #31] После похорон"></th>
 <th><img src="jpg/0.jpg"></th>
