Прочитал Давший клятву

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a212" src="jpg/arhiv_buresveta_3.jpg" title="Давший клятву (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_29.jpg" title="[Эркюль Пуаро #29] Прилив"></th>	
 		<th><img src="data/06.2025.jpg"></th>
 <th><img src="jpg/unfuck_yourself.jpg" title="Unfu*k yourself"></th>		
@@ -1943,14 +1944,15 @@
 <table><tr align="left"> 
 <th colspan="2"><h4><a href="https://flibusta.is/a/19981">Рэнд Айн</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/20622">Сааведра Мигель</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/24262">Сандерсон Брендон</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.is/a/24262">Сандерсон Брендон</a></h4></th>
 </tr><tr>      
 <th><a id="a15" src="jpg/atlant.jpg" title="Атлант расправил плечи (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a123" src="jpg/don_kihot.jpg" title="Дон Кихот Ламанчский (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a210" src="jpg/arhiv_buresveta_1.jpg" title="Путь королей (аудиокнига)"></a></th>
-<th><a id="a211" src="jpg/arhiv_buresveta_2.jpg" title="Слова сияния (аудиокнига)"></a></th>	
+<th><a id="a211" src="jpg/arhiv_buresveta_2.jpg" title="Слова сияния (аудиокнига)"></a></th>
+<th><a id="a212" src="jpg/arhiv_buresveta_3.jpg" title="Давший клятву (аудиокнига)"></a></th>	
 </tr></table>
 
 
