--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/gotovnost.jpg" title="Готовность ко всему"></th>	
 <th><a id="a212" src="jpg/arhiv_buresveta_3.jpg" title="Давший клятву (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_29.jpg" title="[Эркюль Пуаро #29] Прилив"></th>	
 		<th><img src="data/06.2025.jpg"></th>
@@ -573,21 +574,21 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4><a href="http://flibusta.is/a/85845"> Айзексон Уолтер</a></h4></th>	
-<th colspan="2"><h4><a href="http://flibusta.is/a/25986"> Аллен Дэвид</a></h4></th>	
-<th colspan="2"><h4><a href="http://flibusta.is/a/201203">Альмоссави Али</a></h4></th>
-<th colspan="2"><h4><a href="http://flibusta.is/a/279985">Андриян Анастасия</a></h4></th>
-<th colspan="2"><h4><a href="http://flibusta.is/a/29428"> Архангельский Глеб</a></h4></th>
+<th colspan="3"><h4><a href="http://flibusta.is/a/25986"> Аллен Дэвид</a></h4></th>	
+<th colspan="5"><h4><a href="http://flibusta.is/a/201203">Альмоссави Али |</a>
+					<a href="http://flibusta.is/a/279985">Андриян Анастасия|</a>
+					<a href="http://flibusta.is/a/29428"> Архангельский Глеб</a></h4></th>
 </tr><tr>
 <th><img src="jpg/stiv_dzhobs.jpg" title="Стив Джобс"></th> 
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/kak_privesti_dela.jpg" title="Как привести дела в порядок"></th> 
+<th><img src="jpg/gotovnost.jpg" title="Готовность ко всему"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/hackni.jpg" title="Хакни рутину. Как алгоритмы помогают справляться с беспорядком, не тупить в супермаркете и жить проще"></th> 
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/perevodchik.jpg" title="Переводчик с пассивно-агрессивного на общечеловеческий"></th> 
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/findraiv.jpg" title="Финдрайв: как привлечь, сохранить и выгодно вложить свои деньги"></th> 
-<th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
