Прочитал Миссис Макгинти с жизнью рассталась

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/pyaro_30.jpg" title="[Эркюль Пуаро #30] Миссис Макгинти с жизнью рассталась"></th>	
 <th><img src="jpg/gotovnost.jpg" title="Готовность ко всему"></th>	
 <th><a id="a212" src="jpg/arhiv_buresveta_3.jpg" title="Давший клятву (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_29.jpg" title="[Эркюль Пуаро #29] Прилив"></th>	
@@ -197,8 +198,8 @@
 <th><img src="jpg/dragon_age_3.jpg" title="Dragon Age. Маска призрака"></th>
 <th><a id="a131" src="jpg/klark_2.jpg" title="2010: Одиссея Два (аудиокнига)"></a></th>	
 <th><a id="a130" src="jpg/po_6.jpg" title="Тайна Мари Роже (аудиокнига)"></a></th>
-<th><a id="a129" src="jpg/po_5.jpg" title="Падение дома Эшеров (аудиокнига)"></a></th>
-<th><a id="a128" src="jpg/po_4.jpg" title="Овальный портрет (аудиокнига)"></a></th>
+<th><a id="a129" src="jpg/po_4.jpg" title="Падение дома Ашеров (аудиокнига)"></a></th>
+<th><a id="a128" src="jpg/po_5.jpg" title="Овальный портрет (аудиокнига)"></a></th>
 <th><a id="a127" src="jpg/po_3.jpg" title="Чёрный кот (аудиокнига)"></a></th>
 <th><a id="a126" src="jpg/po_2.jpg" title="Разговор с мумией (аудиокнига)"></a></th>
 <th><a id="a125" src="jpg/po_1.jpg" title="Преждевременное погребение (аудиокнига)"></a></th>
@@ -1463,7 +1464,7 @@
 <th><img src="jpg/pyaro_27.jpg" title="[Эркюль Пуаро #27] Лощина"></th>	
 <th><img src="jpg/pyaro_28.jpg" title="[Эркюль Пуаро #28] Подвиги Геракла"></th>
 <th><img src="jpg/pyaro_29.jpg" title="[Эркюль Пуаро #29] Прилив"></th>	
-<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/pyaro_30.jpg" title="[Эркюль Пуаро #30] Миссис Макгинти с жизнью рассталась"></th>	
 <th><img src="jpg/pyaro_31.jpg" title="[Эркюль Пуаро #31] После похорон"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/0.jpg"></th>  </tr>
@@ -1791,7 +1792,7 @@
 <th><a id="a125" src="jpg/po_1.jpg" title="Преждевременное погребение (аудиокнига)"></a></th>
 <th><a id="a129" src="jpg/po_5.jpg" title="Овальный портрет (аудиокнига)"></a></th>
 <th><a id="a130" src="jpg/po_6.jpg" title="Тайна Мари Роже (аудиокнига)"></a></th>
-<th><a id="a128" src="jpg/po_4.jpg" title="Падение дома Эшеров (аудиокнига)"></a></th>
+<th><a id="a128" src="jpg/po_4.jpg" title="Падение дома Ашеров (аудиокнига)"></a></th>
 <th><a id="a126" src="jpg/po_2.jpg" title="Разговор с мумией (аудиокнига)"></a></th>
 <th><a id="a127" src="jpg/po_3.jpg" title="Чёрный кот (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
