Прочитал Хикори Дикори

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/pyaro_32.jpg" title="[Эркюль Пуаро #32] Хикори Дикори"></th>
 <th><img src="jpg/pyaro_30.jpg" title="[Эркюль Пуаро #30] Миссис Макгинти с жизнью рассталась"></th>	
 <th><img src="jpg/gotovnost.jpg" title="Готовность ко всему"></th>	
 <th><a id="a212" src="jpg/arhiv_buresveta_3.jpg" title="Давший клятву (аудиокнига)"></a></th>
@@ -1466,7 +1467,7 @@
 <th><img src="jpg/pyaro_29.jpg" title="[Эркюль Пуаро #29] Прилив"></th>	
 <th><img src="jpg/pyaro_30.jpg" title="[Эркюль Пуаро #30] Миссис Макгинти с жизнью рассталась"></th>	
 <th><img src="jpg/pyaro_31.jpg" title="[Эркюль Пуаро #31] После похорон"></th>
-<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/pyaro_32.jpg" title="[Эркюль Пуаро #32] Хикори Дикори"></th>
 <th><img src="jpg/0.jpg"></th>  </tr>
 <tr> <th><a id="a198" src="jpg/pyaro_34.jpg" title="[Эркюль Пуаро #34] Кошка среди голубей (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
