Прочитал Додо книга 2

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/dodo_kniga_2.jpg" title="Додо книга 2"></th>
 <th><img src="jpg/pyaro_32.jpg" title="[Эркюль Пуаро #32] Хикори Дикори"></th>
 <th><img src="jpg/pyaro_30.jpg" title="[Эркюль Пуаро #30] Миссис Макгинти с жизнью рассталась"></th>	
 <th><img src="jpg/gotovnost.jpg" title="Готовность ко всему"></th>	
@@ -810,11 +811,12 @@
 
 
 <table><tr align="left"> 
-<th colspan="2"><h4>									  Ветошкина Галина</h4></th>
+<th colspan="3"><h4>									  Ветошкина Галина</h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/184698">Волков Алексей</a></h4></th>
 <th colspan="6"><h4><a href="http://flibusta.is/a/116080">Вуйчич Ник</a></h4></th> 
 </tr><tr>
 <th><img src="jpg/dodo_kniga.jpg" title="Ветошкина Галина, Заварин Иван, Игушева Екатерина, Котин Максим - Додо книга"></th>
+<th><img src="jpg/dodo_kniga_2.jpg" title="Додо книга 2"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a137" src="jpg/fgrom_1.jpg" title="Майор Гром. Художественный роман (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
